Merge log module into library module.